src/App.css
@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap");

* {
	margin: 0;
	padding: 0;
	box-sizing: inherit;
	letter-spacing: 0.1rem;
	line-height: 1.5;
}

html {
	/* font-size: 62.5%; */
	font-size: 100%;
}

html,
body {
	min-height: 100%;
}

html,
body,
#root {
	font-family: "Dosis", sans-serif;
	box-sizing: border-box;
}

#root {
	height: 100vh;
}

.App {
	height: 100%;
	background-color: #444;
	overflow: auto;
}

